--- a/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb
+++ b/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import glob\n",
     "from tqdm import tqdm\n",
     "import random\n",
+    "import time\n",
     "from dotenv import load_dotenv"
    ]
   },
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,14 +172,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                              \r"
+      "                                                                      \r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/robertvandevlasakker/Documents/Wageningen University/Period 0 - GRS 70424 Internship/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/robertvandevlasakker/Documents/Wageningen%20University/Period%200%20-%20GRS%2070424%20Internship/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb#X15sZmlsZQ%3D%3D?line=59'>60</a>\u001b[0m \u001b[39m# Call the ChatGPT API to generate a completion for the prompt\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/robertvandevlasakker/Documents/Wageningen%20University/Period%200%20-%20GRS%2070424%20Internship/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb#X15sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m completion \u001b[39m=\u001b[39m openai\u001b[39m.\u001b[39mChatCompletion\u001b[39m.\u001b[39mcreate(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/robertvandevlasakker/Documents/Wageningen%20University/Period%200%20-%20GRS%2070424%20Internship/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb#X15sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m     model \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mgpt-3.5-turbo\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/robertvandevlasakker/Documents/Wageningen%20University/Period%200%20-%20GRS%2070424%20Internship/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb#X15sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m     messages \u001b[39m=\u001b[39m messages,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/robertvandevlasakker/Documents/Wageningen%20University/Period%200%20-%20GRS%2070424%20Internship/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb#X15sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m )\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/robertvandevlasakker/Documents/Wageningen%20University/Period%200%20-%20GRS%2070424%20Internship/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb#X15sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m time\u001b[39m.\u001b[39;49msleep(\u001b[39m2\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/robertvandevlasakker/Documents/Wageningen%20University/Period%200%20-%20GRS%2070424%20Internship/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb#X15sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m \u001b[39m# Save the completion to a JSON file with the file name in the species directory\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/robertvandevlasakker/Documents/Wageningen%20University/Period%200%20-%20GRS%2070424%20Internship/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait_paragraphs_new.ipynb#X15sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mfolder_prompts\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mfolder_species\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00mfile_name\u001b[39m}\u001b[39;00m\u001b[39m.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m fp:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -224,8 +236,8 @@
     "        # Create the question and options for the ChatGPT prompt\n",
     "\n",
     "\n",
-    "        question = F\"Which of the following values correctly describe(s) the '{trait}' trait mentioned in the text? Fill in a '1', if the trait value is likely to occur based on the text, '0' if it is unlikely to occur and 'NA' if there is no information that can be used to infer the occurrence of the trait.\"\n",
-    "        format = F\"\\nPlease ONLY return a Python list of tuples with ALL the options/value combinations from the list with options, like this: [({trait_options[0]}, {random.choice(choices)}), (({trait_options[1]}, {random.choice(choices)}))]\"\n",
+    "        question = F\"Which of the following values correctly describe(s) the '{trait}' trait mentioned in the text? Fill in a '1', if the trait value is likely to occur based on the text, '0' if it is unlikely to occur and return only 'NA' if there is no information that can be used to infer the occurrence of the trait.\"\n",
+    "        format = F\"\\nPlease ONLY return a Python list of tuples with ALL the options/value combinations from the list with options, like this: [({trait_options[0]}, {random.choice(choices)}), (({trait_options[1]}, {random.choice(choices)}))] or ONLY 'NA' in case the there is no information to infer the trait.\"\n",
     "        options = F\"\\nThe possible values for this trait are: {trait_options}.\"\\\n",
     "\n",
     "        user_content = F\"{question} {options} {format}\"\n",
@@ -238,21 +250,41 @@
     "            continue\n",
     "\n",
     "        # Create the messages to send to the ChatGPT API\n",
-    "        # messages = [\n",
-    "        #     {\"role\": \"assistant\", \"content\": text},\n",
-    "        #     {\"role\": \"user\", \"content\": user_content}\n",
-    "        #     ]\n",
-    "        # # Call the ChatGPT API to generate a completion for the prompt\n",
-    "        # completion = openai.ChatCompletion.create(\n",
-    "        #     model = \"gpt-3.5-turbo\",\n",
-    "        #     messages = messages,\n",
-    "        # )\n",
+    "        messages = [\n",
+    "            {\"role\": \"assistant\", \"content\": text},\n",
+    "            {\"role\": \"user\", \"content\": user_content}\n",
+    "            ]\n",
+    "        # Call the ChatGPT API to generate a completion for the prompt\n",
+    "        completion = openai.ChatCompletion.create(\n",
+    "            model = \"gpt-3.5-turbo\",\n",
+    "            messages = messages,\n",
+    "        )\n",
     "\n",
-    "\n",
-    "        # # Save the completion to a JSON file with the file name in the species directory\n",
-    "        # with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
-    "        #     json.dump(completion, fp)\n",
+    "        time.sleep(2)\n",
+    "        \n",
+    "        # Save the completion to a JSON file with the file name in the species directory\n",
+    "        with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
+    "            json.dump(completion, fp)\n",
     "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which of the following values correctly describe(s) the 'Seed colour' trait mentioned in the text? Fill in a '1', if the trait value is likely to occur based on the text, '0' if it is unlikely to occur and return only 'NA' if there is no information that can be used to infer the occurrence of the trait. \n",
+      "The possible values for this trait are: ['black', 'brown', 'green', 'grey', 'white', 'whitish']. \n",
+      "Please ONLY return a Python list of tuples with ALL the options/value combinations from the list with options, like this: [(black, 1), ((brown, 0))] or ONLY 'NA' in case the there is no information to infer the trait.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user_content)"
    ]
   },
   {
@@ -366,7 +398,7 @@
     "]\n",
     "\n",
     "question = F\"Which of the following values correctly describe(s) the '{trait}' trait mentioned in the text? Fill in a '1', if the trait value is likely to occur based on the text, '0' if it is unlikely to occur and 'NA' if there is no information that can be used to infer the occurrence of the trait.\"\n",
-    "format = F\"\\nPlease ONLY return a Python list of tuples with ALL the options/value combinations from the list with options, like this: [('{trait_options[0]}', '{random.choice(choices)}'), ('{trait_options[1]}', '{random.choice(choices)}')] or in case there is not information: [('{trait_options[0]}', 'NA'), ('{trait_options[1]}', 'NA')]\"\n",
+    "format = F\"\\nPlease ONLY return a Python list of tuples with ALL the options/value combinations from the list with options, like this: [('{trait_options[0]}', '{random.choice(choices)}'), ('{trait_options[1]}', '{random.choice(choices)}')] or in case there is not information of the trait only return: 'NA'\"\n",
     "options = F\"\\nThe possible values for this trait are: {trait_options}.\"\\\n",
     "\n",
     "user_content = F\"{question} {options} {format}\""
