Fixed error in DF

--- a/notebooks/reports/OpenAI/3.1_dataframe_to_traits.ipynb
+++ b/notebooks/reports/OpenAI/3.1_dataframe_to_traits.ipynb
@@ -41,32 +41,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['plant type', 'phyllotaxis', 'trunk and root', 'latex', 'crown',\n",
-       "       'stem shape', 'bark', 'bark color', 'leaf shape', 'petiole',\n",
-       "       'leaf blade', 'leaf margin', 'leaf base', 'leaf apex', 'vein',\n",
-       "       'tendril', 'spine', 'blade color', 'fruit', 'inflorescences',\n",
-       "       'sexuality', 'flower color', 'flower shape'],\n",
-       "      dtype='object')"
+       "Index(['liana', 'tree', 'alternate', 'alternate, opposite', 'opposite',\n",
+       "       'opposite, whorls of 3', 'opposite, whorls of 3, alternate',\n",
+       "       '3 palmate', '3-5 palmate', '3-5 pinnate',\n",
+       "       ...\n",
+       "       'orange, yellow, red', 'purple, black', 'red, black',\n",
+       "       'red, purple-brown', 'reddish purple', 'whitish green', 'yellowish',\n",
+       "       'NA?', 'yellow-geen', 'grey'],\n",
+       "      dtype='object', length=167)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_Pierre.columns.get_level_values(0).unique()"
+    "df_Andrei.columns.get_level_values(1).unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +82,9 @@
     "        value = idx[1]\n",
     "        if key not in result_dict:\n",
     "            result_dict[key] = []\n",
+    "        # Error from Andre\n",
+    "        if 'NA' in value:\n",
+    "            continue\n",
     "        result_dict[key].append(value)\n",
     "    \n",
     "    return result_dict\n",
@@ -263,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
