--- a/notebooks/reports/OpenAI/0.1_create_dummy_datasets.ipynb
+++ b/notebooks/reports/OpenAI/0.1_create_dummy_datasets.ipynb
@@ -243,6 +243,35 @@
     "data_frames = [df_FruitColorDescription, df_MainFruitColors, df_Daniels_str_non_color_dummies, df_Daniels_real_ints]\n",
     "df_Daniel_merged = pd.concat(data_frames, axis=1)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### SAVE FILES\n",
+    "root = \"../../../data/interim/\"\n",
+    "\n",
+    "df_Daniel_merged.to_csv(root + \"DF_Daniel.csv\")\n",
+    "df_Andrei_dummies.to_csv(root + \"DF_Andrei.csv\")\n",
+    "df_Pierre.to_csv(root + \"DF_Pierre.csv\")\n",
+    "\n",
+    "### SAVE FILES\n",
+    "root = \"../../../data/OpenAI/DataFrames/\"\n",
+    "\n",
+    "df_Daniel_merged.dropna().to_csv(root + \"DF_Daniel.csv\")\n",
+    "df_Andrei_dummies.to_csv(root + \"DF_Andrei.csv\")\n",
+    "df_Pierre.to_csv(root + \"DF_Pierre.csv\")"
+   ]
   }
  ],
  "metadata": {
