Collected new data

--- a/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
+++ b/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
@@ -176,47 +176,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_list = ['Avicennia germinans',\n",
-    " 'Metopium brownei',\n",
-    " 'Handroanthus billbergii',\n",
-    " 'Bourreria succulenta',\n",
-    " 'Bursera karsteniana',\n",
-    " 'Bursera simaruba',\n",
-    " 'Bursera tomentosa',\n",
-    " 'Cynophalla flexuosa',\n",
-    " 'Cynophalla hastata',\n",
+    "test_list = [\n",
+    "    'Avicennia germinans',\n",
+    "#  'Metopium brownei',\n",
+    "#  'Handroanthus billbergii',\n",
+    "#  'Bourreria succulenta',\n",
+    "#  'Bursera karsteniana',\n",
+    "#  'Bursera simaruba',\n",
+    "#  'Bursera tomentosa',\n",
+    "#  'Cynophalla flexuosa',\n",
+    "#  'Cynophalla hastata',\n",
     " 'Quadrella odoratissima',\n",
-    " 'Crossopetalum rhacoma',\n",
-    " 'Maytenus versluysii',\n",
-    " 'Clusia rosea',\n",
-    " 'Conocarpus erectus',\n",
-    " 'Laguncularia racemosa']"
+    "#  'Crossopetalum rhacoma',\n",
+    "#  'Maytenus versluysii',\n",
+    "#  'Clusia rosea',\n",
+    "#  'Conocarpus erectus',\n",
+    "#  'Laguncularia racemosa'\n",
+    " ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                               \r"
+      "                                                                            \r"
      ]
     }
    ],
    "source": [
     "# Define the path to the directory where the prompts and results will be saved\n",
     "folder_prompts = \"../../../data/OpenAI/PromptsResults/OriginalData/\"\n",
-    "\n",
-    "choices = [\n",
-    "    1, 0, \n",
-    "]\n",
     "\n",
     "# Loop over each JSON file in the list caribbean_jsons_paras\n",
     "for idx, (species, text) in enumerate(caribbean_paras.items()):\n",
@@ -238,9 +236,9 @@
     "        pbar.set_description(f\"{idx}: {species}\")\n",
     "\n",
     "        # Create the question and options for the ChatGPT prompt\n",
-    "        question = F\"Which of the following values correctly describe(s) the '{trait}' trait mentioned in the text? Fill in a '1', if the trait value is likely to occur based on the text, '0' if it is unlikely to occur and 'NA' if there is no information that can be used to infer the occurrence of the trait.\"\n",
-    "        format = F\"\\nPlease ONLY return a Python list of tuples with ALL the options/value combinations from the list with options, like this: [({trait_options[0]}, {random.choice(choices)}), (({trait_options[1]}, {random.choice(choices)}))]\"\n",
-    "        options = F\"\\nThe possible values for this trait are: {trait_options}.\"\\\n",
+    "        question = F\"Which of the following values correctly describe(s) the '{trait}' trait mentioned in the text? Fill in a '1', if the trait value is likely to occur based on the text, '0' if it is unlikely to occur bases on the text.\"\n",
+    "        format = F\"\\nPlease ONLY return a Python list of tuples with ALL options with either a '0' or a '1' like this: [({trait_options[0]}, 1), (({trait_options[1]}, 0))], return ONLY 'NaN' if no information about the trait '{trait}' can be inferred from the text.\"\n",
+    "        options = F\"\\nThe possible options for this trait are: {trait_options}.\"\\\n",
     "\n",
     "        user_content = F\"{question} {options} {format}\"\n",
     "        # print(user_content)\n",
@@ -269,6 +267,25 @@
     "\n",
     "        time.sleep(2)\n",
     "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which of the following values correctly describe(s) the 'Seed colour' trait mentioned in the text? Fill in a '1', if the trait value is likely to occur based on the text, '0' if it is unlikely to occur bases on the text. \n",
+      "The possible options for this trait are: ['Not applicable', 'black', 'brown', 'green', 'grey', 'white', 'whitish']. \n",
+      "Please ONLY return a Python list of tuples with ALL options with either a '0' or a '1' like this: [(Not applicable, 1), ((black, 0))], return ONLY 'NaN' if no information about the trait 'Seed colour' can be inferred from the text.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user_content)"
    ]
   },
   {
