--- a/notebooks/reports/OpenAI/5.2.2_ChatGPT_prompt_readings_original.ipynb
+++ b/notebooks/reports/OpenAI/5.2.2_ChatGPT_prompt_readings_original.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,15 +319,15 @@
     "        for incorrect_value in incorrect_values:\n",
     "            df_Andrei_ChatGPT.loc[species, (trait, incorrect_value)] = 0\n",
     "\n",
-    "folder_prompt_results = \"../../../data/OpenAI/PromptsAnalysesData/\"\n",
+    "folder_prompt_results = \"../../../data/OpenAI/PromptsAnalysesData/OriginalData/\"\n",
     "\n",
-    "# df_Andrei_ChatGPT.to_csv(F\"{folder_prompt_results}caribbean_df_orig_ChatGPT.csv\")\n",
-    "# df_Andrei.loc[df_Andrei_ChatGPT.index].to_csv(F\"{folder_prompt_results}caribbean_df_orig_GT.csv\")"
+    "df_Andrei_ChatGPT.to_csv(F\"{folder_prompt_results}caribbean_df_orig_ChatGPT.csv\")\n",
+    "df_Andrei.loc[df_Andrei_ChatGPT.index].to_csv(F\"{folder_prompt_results}caribbean_df_orig_GT.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
        "[40 rows x 205 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2906,7 +2906,7 @@
        "[40 rows x 205 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
