--- a/notebooks/reports/OpenAI/5.1.3_ChatGPT_zeroshot_per_species.ipynb
+++ b/notebooks/reports/OpenAI/5.1.3_ChatGPT_zeroshot_per_species.ipynb
@@ -132,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                               \r"
+      "                                                                        \r"
      ]
     }
    ],
@@ -171,7 +171,7 @@
     "\n",
     "        # Create the question and options for the ChatGPT prompt\n",
     "        question = F\"For the species '{species}' which of the following options is applicable for the trait '{trait}'\" \n",
-    "        text_helper = F\"Return 'NA' if none of the options are aplicable. Please return your answer as a Python list.\"\n",
+    "        text_helper = F\"Return 'NaN' if none of the options are applicable. Please return your answer as a Python list.\"\n",
     "        user_content = F\"{question}\\n{options}\\n{text_helper}\"\n",
     "\n",
     "        # Combine the words in the trait name with capital letters and use this as the file name\n",
@@ -202,19 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For the species 'Avicennia germinans' which of the following options is applicable for the trait 'Leaf shape'\n",
-      "['elliptic', 'elliptic, elongate', 'elliptic, lanceolate', 'elliptic, obovate', 'elliptic, ovate', 'elliptic, ovate, round', 'elongate', 'elongate, elliptic, obovate', 'elongate, obovate', 'kidney-shaped, circular', 'lanceolate, elliptic', 'linear', 'linear, obovate', 'obovate', 'obovate, elliptic', 'obovate, spathulate', 'ovate', 'ovate, circular', 'ovate, elliptic', 'ovate, elliptic, elongate', 'ovate, heart-shaped', 'spathulate, obovate']\n",
-      "Return 'NA' if none of the options are aplicable. Please return you answer as a Python tuple list.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(user_content)"
    ]
