--- a/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses_original.ipynb
+++ b/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses_original.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -9958,11 +9958,11 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "folder_figures = \"../../../reports/figures/\"\n",
-    "file_name = F\"PxPlot_HTML_HeatmapPredictions_TextData_{date}.html\"\n",
-    "fig.write_html(F\"{folder_figures}{file_name}\")\n",
-    "file_name = F\"PxPlot_PDF_HeatmapPredictions_TextData_{date}.pdf\"\n",
-    "fig.write_image(F\"{folder_figures}{file_name}\")"
+    "# folder_figures = \"../../../reports/figures/\"\n",
+    "# file_name = F\"PxPlot_HTML_HeatmapPredictions_TextData_{date}.html\"\n",
+    "# fig.write_html(F\"{folder_figures}{file_name}\")\n",
+    "# file_name = F\"PxPlot_PDF_HeatmapPredictions_TextData_{date}.pdf\"\n",
+    "# fig.write_image(F\"{folder_figures}{file_name}\")"
    ]
   }
  ],
