--- a/notebooks/reports/surveys/1.0_survey_readings.ipynb
+++ b/notebooks/reports/surveys/1.0_survey_readings.ipynb
@@ -63,12 +63,12 @@
    "id": "477e5bfa",
    "metadata": {},
    "source": [
-    "## Testing"
+    "## New Version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "0eb77df3",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
+   "id": "a3ff9400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "fc88edb9",
    "metadata": {},
    "outputs": [],
@@ -231,6 +241,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "020a6b5c0ed803a704c00010560cf50a059d086f11791eecdae2eedc39704b9e"
+   }
   }
  },
  "nbformat": 4,
